@@ -1,5 +1,7 @@
 Changes in version 0.0.2 - UNRELEASED:
- * Bug #20780; Shuffle and persist the ordering of internal bridges.
+ * Bug #20780: Shuffle and persist the ordering of internal bridges.
+ * Bug #20806: Add an option to disable including `libavcodec.so` in the
+   firefox container.
 
 Changes in version 0.0.1 - 2016-12-09:
  * Initial release.
